--- a/src/loadPages/video/video.css
+++ b/src/loadPages/video/video.css
@@ -1,3 +1,16 @@
 .video{
   color:pink;
 }
+
+.cardLike, .cardSave, .editSave{
+  cursor: pointer;
+}
+.optBTN{
+  /* position: relative; */
+  /* float: left; */
+  cursor: default !important;
+}
+
+.imgxx:hover{
+  opacity: 1 !important;
+}
