--- a/src/loadPages/video/video.css
+++ b/src/loadPages/video/video.css
@@ -1,8 +1,8 @@
-.video{
-  color:pink;
+.videoBody{
+  margin-top:60px;
 }
 
-.cardLike, .cardSave, .editSave{
+.cardLike, .cardSave, .editSave, .vidShare{
   cursor: pointer;
 }
 .optBTN{
